[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exhaust"
authors = [{name = "Maik Riechert", email = "maik.riechert@arcor.de"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"

[project.urls]
Source = "https://github.com/letmaik/exhaust"

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autodoc-typehints",
    "sphinx-automodapi"
]
