[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exhaust"
authors = [{name = "Maik Riechert"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"

[project.urls]
Source = "https://github.com/letmaik/exhaust"
Documentation = "https://github.com/letmaik/exhaust"
Changelog = "https://github.com/letmaik/exhaust/blob/main/CHANGELOG.md"
